# cec-sync

./: .gitconfig  Cargo.toml  README.md  flake-linter.nix  flake.nix
src/: macro_command.rs  main.rs  meta_command.rs
src/backend/: all.rs  dbus.rs  mod.rs  udev.rs  unix_socket.rs
src/backend/dbus/: mod.rs
src/backend/dbus/mpris/: mod.rs  player.rs
src/backend/dbus/systemd_logind/: mod.rs
src/backend/wayland/: mod.rs
