[package]
name = "cec-sync"
version = "0.2.1"
edition = "2024"

[dependencies]
async-channel = "2.5.0"
async-executor = "1.13.2"
async-io = "2.4.1"
async-net = "2.0.0"
async-stream = "0.3.6"
blocking = "1.6.2"
cec-rs = "12.0.0"
clap = { version = "4.5.41", features = ["default", "derive"] }
futures-util = "0.3.31"
logind-zbus = "5.3.2"
postcard = { version = "1.1.2", features = [ "experimental-derive" ] }
serde = "1.0.219"
thiserror = "2.0.12"
udev = "0.9.3"
wayland-backend = "0.3.10"
wayland-client = "0.31.10"
wayland-scanner = "0.31.6"
zbus = "5.8.0"

[profile.release]
lto = true
panic = "abort"
strip = true
